{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 36,
  "lineage": "f014bb79-5f0b-1e98-73b9-3973b9b3b53a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:internet-gateway/igw-0d71bc5e1955649ff",
            "id": "igw-0d71bc5e1955649ff",
            "owner_id": "182024812696",
            "tags": {
              "Name": "waf-study-igw"
            },
            "tags_all": {
              "Name": "waf-study-igw"
            },
            "vpc_id": "vpc-06c442d3c750851e6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ec2-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:loadbalancer/app/ec2-alb/ef831b98564bd943",
            "arn_suffix": "app/ec2-alb/ef831b98564bd943",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ec2-alb-753401678.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:loadbalancer/app/ec2-alb/ef831b98564bd943",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ec2-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dfc4ecfbc7d6ffdd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01337add583f95f4a"
              },
              {
                "subnet_id": "subnet-0e209b815ccde6ba5"
              }
            ],
            "subnets": [
              "subnet-01337add583f95f4a",
              "subnet-0e209b815ccde6ba5"
            ],
            "tags": {
              "Name": "ec2-alb"
            },
            "tags_all": {
              "Name": "ec2-alb"
            },
            "vpc_id": "vpc-06c442d3c750851e6",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ec2-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:listener/app/ec2-alb/ef831b98564bd943/359c77da5b582dad",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/ec2-tg/34dede609b78905a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:listener/app/ec2-alb/ef831b98564bd943/359c77da5b582dad",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:loadbalancer/app/ec2-alb/ef831b98564bd943",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ec2-alb",
            "aws_lb_target_group.ec2-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/ec2-tg/34dede609b78905a",
            "arn_suffix": "targetgroup/ec2-tg/34dede609b78905a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/ec2-tg/34dede609b78905a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ec2-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06c442d3c750851e6"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2-alb-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/ec2-tg/34dede609b78905a-20240122133649608600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/ec2-tg/34dede609b78905a",
            "target_id": "i-09399dae10098d55b"
          },
          "dependencies": [
            "aws_lb_target_group.ec2-tg",
            "aws_security_group.alb-sg",
            "aws_security_group.ins-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "module.waf-ec2.aws_instance.instance",
            "module.waf-ec2.aws_key_pair.ins_keypair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:route-table/rtb-0f3c1d605440ed59f",
            "id": "rtb-0f3c1d605440ed59f",
            "owner_id": "182024812696",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d71bc5e1955649ff",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c442d3c750851e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e7c879a1a5b9cba",
            "route_table_id": "rtb-0f3c1d605440ed59f",
            "subnet_id": "subnet-0e209b815ccde6ba5"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "ap-northeast-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094694dc841b97f75",
            "route_table_id": "rtb-0f3c1d605440ed59f",
            "subnet_id": "subnet-01337add583f95f4a"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:security-group/sg-0dfc4ecfbc7d6ffdd",
            "description": "alb-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfc4ecfbc7d6ffdd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "182024812696",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c442d3c750851e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ins-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:security-group/sg-082e0735d2c6b627d",
            "description": "description",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082e0735d2c6b627d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dfc4ecfbc7d6ffdd"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ins-sg",
            "name_prefix": "",
            "owner_id": "182024812696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-ins-sg"
            },
            "tags_all": {
              "Name": "default-ins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c442d3c750851e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-0e209b815ccde6ba5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e209b815ccde6ba5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "waf-stduy-publuc-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "waf-stduy-publuc-ap-northeast-2a"
            },
            "vpc_id": "vpc-06c442d3c750851e6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "ap-northeast-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-01337add583f95f4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01337add583f95f4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "waf-stduy-publuc-ap-northeast-2b"
            },
            "tags_all": {
              "Name": "waf-stduy-publuc-ap-northeast-2b"
            },
            "vpc_id": "vpc-06c442d3c750851e6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:vpc/vpc-06c442d3c750851e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-022be89813be29613",
            "default_route_table_id": "rtb-09c4ae396f8982992",
            "default_security_group_id": "sg-0605d984f7bc7d522",
            "dhcp_options_id": "dopt-00db6602bf8d3ab9d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c442d3c750851e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c4ae396f8982992",
            "owner_id": "182024812696",
            "tags": {
              "Name": "waf-study-vpc"
            },
            "tags_all": {
              "Name": "waf-study-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.waf-ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ins_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096b46589ef0d0a5d",
            "association_id": "eipassoc-01bdb9cdea7274beb",
            "domain": "vpc",
            "id": "eipalloc-096b46589ef0d0a5d",
            "instance": "i-09399dae10098d55b",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-07c7e176bab99c28b",
            "private_dns": "ip-10-0-1-186.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.186",
            "public_dns": "ec2-3-37-245-232.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.245.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "waf-dvwa-ins-eip",
              "Resource": "eip"
            },
            "tags_all": {
              "Name": "waf-dvwa-ins-eip",
              "Resource": "eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.ins-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "module.waf-ec2.aws_instance.instance",
            "module.waf-ec2.aws_key_pair.ins_keypair"
          ]
        }
      ]
    },
    {
      "module": "module.waf-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04076fc9000412d43",
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:instance/i-09399dae10098d55b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09399dae10098d55b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "terraform-20240122133421587900000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c7e176bab99c28b",
            "private_dns": "ip-10-0-1-186.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.186",
            "public_dns": "ec2-3-37-245-232.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.245.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c36e2e8a2b765dc1",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e209b815ccde6ba5",
            "tags": {
              "MadeBy": "terraform",
              "Monitoring": "true",
              "Name": "waf-dvwa-ins",
              "Resource": "ec2"
            },
            "tags_all": {
              "MadeBy": "terraform",
              "Monitoring": "true",
              "Name": "waf-dvwa-ins",
              "Resource": "ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-082e0735d2c6b627d"
            ]
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.ins-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "module.waf-ec2.aws_key_pair.ins_keypair"
          ]
        }
      ]
    }
  ]
}